--- a/src/app/Authentication/signIn/signIn.component.html
+++ b/src/app/Authentication/signIn/signIn.component.html
@@ -23,7 +23,7 @@
 
       <button class="btn btn-lg btn-primary btn-block btn-signin" [disabled]="!signIn.valid" type="submit"> Crea tu cuenta!</button>
     </form>
-    <a href="#" class="forgot-password">
+    <a routerLink="../login" class="forgot-password">
       Tienes cuenta? Inicia sesión aqui!
     </a>
   </div>
