--- a/src/app/Authentication/login/login.component.html
+++ b/src/app/Authentication/login/login.component.html
@@ -1,15 +1,16 @@
 <div class="container">
-  <div class="form-card card-container">
-    <img id="profile-img" class="card-img" src="../../../assets/Logo.jpg" />
-    <p id="profile-name" class="profile-name-card"></p>
-    <form class="form-class" [formGroup]="login" (ngSubmit)="onLogin()">
-      <span id="reauth-email" class="reauth-email"></span>
-      <input type="email" id="email" class="form-control" placeholder="Email"   formControlName="email" required autofocus >
-      <input type="password" id="password" class="form-control" placeholder="Contraseña"  formControlName="password" required>
-      <button class="btn btn-lg btn-primary btn-block btn-form" [disabled]="!login.valid"  type="submit">Inicia sesión</button>
-    </form>
-    <a routerLink="../signIn" class="forgot-password">
+    <div class="form-card card-container">
+        <img id="profile-img" class="card-img" src="../../../assets/Logo.jpg" />
+        <p id="profile-name" class="profile-name-card"></p>
+        <form class="form-class" [formGroup]="login" (ngSubmit)="onLogin()">
+            <span id="reauth-email" class="reauth-email"></span>
+            <input type="email" id="email" class="form-control" placeholder="Email" formControlName="email" required autofocus>
+            <input type="password" id="password" class="form-control" placeholder="Contraseña" formControlName="password" required>
+            <button class="btn btn-lg btn-primary btn-block btn-form" [disabled]="!login.valid" type="submit">Inicia
+        sesión</button>
+        </form>
+        <a routerLink="../signIn" class="forgot-password">
       No tienes cuenta? Crea una aqui!
     </a>
-  </div>
+    </div>
 </div>
