--- a/src/app/Authentication/signIn/signIn.component.html
+++ b/src/app/Authentication/signIn/signIn.component.html
@@ -9,12 +9,12 @@
       <input type="email" id="email" class="form-control" placeholder="Email" required  formControlName="email"  autofocus
              name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
       <input type="text" id="name" class="form-control" placeholder="Nombre" required  formControlName="name" >
-      <input type="text" id="dni" class="form-control" placeholder="Dni"  formControlName="dni" pattern="^[0-9]{8}[TRWAGMYFPDXBNJZSQVHLCKE]$" required>
+      <input type="text" id="dni" class="form-control" placeholder="Dni"  formControlName="dni"  required>
       <input type="password" id="password" class="form-control" placeholder="Contraseña" required
              formControlName="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
-      <label for="shift">Turno</label>
+      <label for="turn">Turno</label>
 
-      <select  id="shift" required  formControlName="shift">
+      <select  id="turn" required  formControlName="turn">
       <option selected value="A">A</option>
       <option value="B">B</option>
       <option value="C">C</option>
