--- a/src/app/Authentication/signIn/signIn.component.html
+++ b/src/app/Authentication/signIn/signIn.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="form-card card-container">
-    <img id="profile-img" class="card-img" src="../../../assets/Logo.jpg" />
+    <img alt="" class="card-img" id="profile-img" src="../../../assets/Logo.jpg"/>
     <p id="profile-name" class="profile-name-card"></p>
 
     <form class="form-class" [formGroup]="signIn" (ngSubmit)="onSignIn()" >
@@ -8,23 +8,21 @@
 
       <input type="email" id="email" class="form-control" placeholder="Email" required  formControlName="email"  autofocus
              name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
-      <input type="text" id="name" class="form-control" placeholder="Nombre" required  formControlName="name" >
-      <input type="text" id="dni" class="form-control" placeholder="Dni"  formControlName="dni"  required>
+      <!--  <input type="text" id="name" class="form-control" placeholder="Nombre" required  formControlName="name" >
+        <input type="text" id="dni" class="form-control" placeholder="Dni"  formControlName="dni"  required> -->
       <input type="password" id="password" class="form-control" placeholder="Contraseña" required
              formControlName="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
-      <label for="turn">Turno</label>
+      <!--  <label for="turn">Turno</label>
 
-      <select  id="turn" required  formControlName="turn">
-      <option selected value="A">A</option>
-      <option value="B">B</option>
-      <option value="C">C</option>
-      <option value="D">D</option>
-      </select>
-
+       <select  id="turn" required  formControlName="turn">
+        <option selected value="A">A</option>
+        <option value="B">B</option>
+        <option value="C">C</option>
+        <option value="D">D</option>
+        </select>
+      -->
       <button class="form-btn btn-lg btn-primary btn-block btn-form" [disabled]="!signIn.valid" type="submit"> Crea tu cuenta!</button>
     </form>
-    <a routerLink="../login" class="forgot-password">
-      Tienes cuenta? Inicia sesión aqui!
-    </a>
+
   </div>
 </div>
