--- a/src/app/Authentication/login/login.component.html
+++ b/src/app/Authentication/login/login.component.html
@@ -1,14 +1,18 @@
 <div class="container">
-  <div class="form-card card-container">
-    <img alt="" class="card-img" id="profile-img" src="../../../assets/Logo.jpg"/>
-    <p id="profile-name" class="profile-name-card"></p>
-    <form class="form-class" [formGroup]="login" (ngSubmit)="onLogin()">
-      <span id="reauth-email" class="reauth-email"></span>
-      <input type="email" id="email" class="form-control" placeholder="Email"   formControlName="email" required autofocus >
-      <input type="password" id="password" class="form-control" placeholder="Contraseña"  formControlName="password" required>
-      <button class="btn btn-lg btn-primary btn-block btn-form" [disabled]="!login.valid"  type="submit">Inicia sesión</button>
-    </form>
+    <div class="form-card card-container">
+        <img alt="" class="card-img" id="profile-img" src="../../../assets/Logo.jpg"/>
+        <p id="profile-name" class="profile-name-card"></p>
+        <form class="form-class" [formGroup]="login" (ngSubmit)="onLogin()">
+            <span id="reauth-email" class="reauth-email"></span>
+            <input type="email" id="email" class="form-control" placeholder="Email" formControlName="email" required
+                   autofocus>
+            <input type="password" id="password" class="form-control" placeholder="Contraseña"
+                   formControlName="password" required>
+            <button [class.notAllowedPointer]="!login.valid" class="btn btn-lg btn-primary btn-block btn-form"
+                    [disabled]="!login.valid" type="submit">Inicia sesión
+            </button>
+        </form>
 
-    <p *ngIf="tried === true" class="text-danger"> El usuario y/o contraseña son incorrectos </p>
-  </div>
+        <p *ngIf="tried === true" class="text-danger"> El usuario y/o contraseña son incorrectos </p>
+    </div>
 </div>
